--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,8 @@ captures/
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
-#*.keystore
+*.jks
+*.keystore
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
@@ -149,3 +149,10 @@ firebase-debug.log
 *.zip
 *.rar
 *.7z
+
+# Claude AI files
+.claude/
+
+# Documentation files to keep
+!DEPLOYMENT_GUIDE.md
+!PRODUCTION_SUMMARY.md
