--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,22 +11,86 @@ android {
         minSdkVersion 21
         targetSdkVersion 34
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        
+
         // Room schema export directory
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
+
+        // Vector drawable support for older devices
+        vectorDrawables.useSupportLibrary = true
+
+        // Multidex support
+        multiDexEnabled true
+    }
+
+    lint {
+        checkReleaseBuilds false
+        abortOnError false
+        disable 'MissingDefaultResource'
+    }
+
+    signingConfigs {
+        release {
+            storeFile file('../tamswallet-release-key.keystore')
+            storePassword 'tamswallet2024'
+            keyAlias 'tamswallet'
+            keyPassword 'tamswallet2024'
+        }
+    }
+
+    flavorDimensions "environment"
+
+    productFlavors {
+        dev {
+            dimension "environment"
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+            buildConfigField "String", "ENVIRONMENT", '"DEV"'
+        }
+
+        prod {
+            dimension "environment"
+            buildConfigField "String", "ENVIRONMENT", '"PRODUCTION"'
+        }
     }
 
     buildTypes {
-        release {
+        debug {
+            debuggable true
             minifyEnabled false
+            shrinkResources false
+            applicationIdSuffix ".debug"
+            versionNameSuffix "-debug"
+            buildConfigField "boolean", "DEBUG_MODE", "true"
+            buildConfigField "String", "API_BASE_URL", '"https://api-dev.tamswallet.com/"'
+        }
+
+        staging {
+            debuggable true
+            minifyEnabled true
+            shrinkResources true
+            applicationIdSuffix ".staging"
+            versionNameSuffix "-staging"
+            buildConfigField "boolean", "DEBUG_MODE", "true"
+            buildConfigField "String", "API_BASE_URL", '"https://api-staging.tamswallet.com/"'
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        release {
+            debuggable false
+            minifyEnabled false
+            shrinkResources false
+            zipAlignEnabled true
+            buildConfigField "boolean", "DEBUG_MODE", "false"
+            buildConfigField "String", "API_BASE_URL", '"https://api.tamswallet.com/"'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 
@@ -37,6 +101,25 @@ android {
 
     buildFeatures {
         viewBinding true
+        buildConfig true
+    }
+
+    bundle {
+        language {
+            enableSplit = true
+        }
+        density {
+            enableSplit = true
+        }
+        abi {
+            enableSplit = true
+        }
+    }
+
+    packagingOptions {
+        resources {
+            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0', 'META-INF/*.kotlin_module']
+        }
     }
 }
 
@@ -113,11 +196,18 @@ dependencies {
     // Testing
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.room:room-testing:2.5.2'
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
+    testImplementation 'org.mockito:mockito-core:5.7.0'
+    testImplementation 'org.mockito:mockito-android:5.7.0'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
     androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.test:core:1.5.0'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
 }
 
 configurations.all {
